force-app/main/default/objects/Store__c/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <formula>IMAGE(&quot;http://maps.google.com/maps/api/staticmap?center=&quot; + TEXT(Location__Latitude__s) + &quot;,&quot; + TEXT(Location__Longitude__s) +&quot;&amp;zoom=16&amp;size=430x300&amp;markers=color:blue|&quot; + TEXT(Location__Latitude__s) + &quot;,&quot; + TEXT(Location__Longitude__s) + &quot;&amp;sensor=false&amp;format=png32!&quot;
, &quot;Error retrieving map&quot;, 300, 430)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map</label>
    <type>Text</type>
</CustomField>