force-app/main/default/objects/Store__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <label>Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>