force-app/main/default/objects/Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Region__c</columns>
    <columns>Location__Latitude__s</columns>
    <columns>Location__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>